--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
 
     <title>Aptitud</title>
 
+    <link rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+      />
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Roboto:100,300,400"
+      />
     <link rel='stylesheet' href='/bundle.css'>
 
     <script defer src='/bundle.js'></script>
