--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html>
+<html lang="se">
   <head>
     <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width'>
+    <meta httpEquiv="x-ua-compatible" content="ie=edge" />
+    <meta name="keywords" content="aptitud" />
+    <meta name="description" content="Jävlaranamma, glädje &amp; transparens" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+      shrink-to-fit=no" />
+    <link rel="icon" href="./favicon.png" />
 
-    <title>Aptitud</title>
+    <title>Aptitud - enklare, gladare, roligare</title>
 
     <link rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
